# pantry-tracker-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  dev.dockerfile  docker-compose.yml  rustfmt.toml
.github/: Dockerfile
.github/actions/update_version/: action.yaml
.github/workflows/: ci.yaml
crates/database/: Cargo.toml
crates/database/src/: errors.rs  ingredients.rs  lib.rs  pantry_items.rs  recipe_ingredients.rs  recipe_users.rs  recipes.rs  users.rs
crates/db_entities/: Cargo.toml
crates/db_entities/src/: categories.rs  ingredient_names.rs  ingredients.rs  lib.rs  pantry_items.rs  prelude.rs  recipe_categories.rs  recipe_ingredients.rs  recipes.rs  users.rs
crates/entities/: Cargo.toml
crates/entities/src/: pantry_items.rs  recipe_users.rs
crates/migrations/src/: lib.rs  m20240107_000001_base.rs
deploy/docker/: nginx.template
src/: main.rs  redis.rs  settings.rs  test.rs
src/dao/: db_client.rs  mod.rs  recipes.rs
src/dao/ingredients/: db_client.rs  dto.rs  mod.rs
src/dao/users/: db_client.rs  dto.rs  mod.rs
src/database/: a.rs  dto.rs  errors.rs  mod.rs  recipe_ingredients.rs  recipe_users.rs  recipes.rs
src/database/categories/: dto.rs  mod.rs
src/database/ingredient_names/: dto.rs  mod.rs
src/database/ingredients/: dto.rs  mod.rs
src/database/pantry_items/: dto.rs  mod.rs
src/database/recipe_categories/: dto.rs  mod.rs
src/database/recipe_ingredients/: dto.rs  mod.rs
src/database/recipe_users/: dto.rs  mod.rs
src/database/recipes/: dto.rs  mod.rs
src/database/users/: dto.rs  mod.rs
src/server/: mod.rs  payload.rs  state.rs
src/server/routes/: errors.rs  mod.rs  utils.rs
src/server/routes/categories/: mod.rs  payload.rs
src/server/routes/ingredient_names/: mod.rs  payload.rs
src/server/routes/ingredients/: mod.rs  payload.rs
src/server/routes/login/: mod.rs  payload.rs
src/server/routes/pantry_items/: mod.rs  payload.rs
src/server/routes/parse_ingredients/: mod.rs  payload.rs
src/server/routes/parse_recipe_link/: mod.rs  payload.rs
src/server/routes/possible_recipes/: mod.rs  payload.rs
src/server/routes/recipe_categories/: mod.rs  payload.rs
src/server/routes/recipe_ingredients/: mod.rs  payload.rs
src/server/routes/recipe_users/: mod.rs  payload.rs
src/server/routes/recipes/: mod.rs  payload.rs
src/server/routes/recipes_with_ingredients/: mod.rs  payload.rs
src/server/routes/users/: mod.rs  payload.rs  state.rs
