[package]
name = "pantry-tracker"
version = "24.8.0"
edition = "2021"

[[bin]]
name = "pantry-tracker"
path = "src/main.rs"

[workspace]
members = [".", "./crates/migrations", "./crates/db_entities"]

[dependencies]
sea-orm = { version = "^0.12.0", features = [
  "sqlx-postgres",
  "runtime-async-std-rustls",
  "macros",
] }
sea-orm-migration = { version = "^0.12.0" }
async-trait = "0.1.77"
futures = "0.3.28"
migrations = { path = "./crates/migrations" }
db_entities = { path = "./crates/db_entities" }
uuid = { version = "1.6.1", features = ["v4"] }
chrono = "0.4.31"
serde = { version = "1.0.197", features = ["derive"] }
color-eyre = "0.6.3"
thiserror = "1.0.58"
log = "0.4.21"
tokio = { version = "1.36.0", features = ["full"] }
axum = "0.7.4"
clap = { version = "4.5.3", features = ["env", "derive"] }
fern = { version = "0.6.2", features = ["colored"] }
dotenvy = "0.15.7"
tower-http = { version = "0.5.2", features = ["cors"] }
http = "1.1.0"
urlencoding = "2.1.3"
serde_json = "1.0.115"
regex = "1.10.4"
url = { version = "2.5.0", features = ["serde"] }
scraper = "0.19.0"
reqwest = { version = "0.12.3", default-features = false, features = [
  "rustls-tls-native-roots",
] }
iso8601 = "0.6.1"
titlecase = "3.0.0"
htmlentity = "1.3.1"
axum-extra = { version = "0.9.3", features = ["cookie"] }
rand = "0.8.5"
redis = "0.25.3"
argon2 = "0.5.3"
