[package]
name = "pantry-tracker"
version = "24.8.3"
edition = "2021"

[[bin]]
name = "pantry-tracker"
path = "src/main.rs"

[workspace]
members = [".", "./crates/migrations", "./crates/db_entities"]

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.77"
axum = "0.7.4"
axum-extra = { version = "0.9.3", features = ["cookie"] }
chrono = "0.4.31"
clap = { version = "4.5.3", features = ["env", "derive"] }
color-eyre = "0.6.3"
db_entities = { path = "./crates/db_entities" }
dotenvy = "0.15.7"
fern = { version = "0.6.2", features = ["colored"] }
futures = "0.3.28"
h2 = "0.4.5"
htmlentity = "1.3.1"
http = "1.1.0"
iso8601 = "0.6.1"
log = "0.4.21"
migrations = { path = "./crates/migrations" }
mio = "1.0.1"
rand = "0.8.5"
redis = "0.25.3"
regex = "1.10.4"
reqwest = { version = "0.12.3", default-features = false, features = [
  "rustls-tls-native-roots",
] }
rustls = "0.23.12"
scraper = "0.19.0"
sea-orm = { version = "^0.12.0", features = [
  "sqlx-postgres",
  "runtime-async-std-rustls",
  "macros",
] }
sea-orm-migration = { version = "^0.12.0" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
titlecase = "3.0.0"
tokio = { version = "1.36.0", features = ["full"] }
url = { version = "2.5.0", features = ["serde"] }
urlencoding = "2.1.3"
uuid = { version = "1.6.1", features = ["v4"] }
whoami = "1.5.1"
