[package]
name = "database"
version = "0.1.0"
edition = "2021"

[lib]
name = "database"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.77"
chrono = "0.4.31"
entities = { path = "../entities" }
sea-orm = { version = "^0.12.0", features = [
  "sqlx-postgres",
  "runtime-async-std-native-tls",
  "macros",
] }
uuid = "1.6.1"
color-eyre = "0.6.3"
thiserror = "1.0.58"
